[gd_scene load_steps=14 format=3 uid="uid://b8xj2kmamn4o5"]

[ext_resource type="Script" uid="uid://dyrmd5ynoro0b" path="res://scripts/MainMenu.gd" id="1_main_menu"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 42
font_color = Color(0.85, 0.85, 0.9, 1)
outline_size = 2
outline_color = Color(0.1, 0.1, 0.15, 0.8)
shadow_size = 1
shadow_color = Color(0, 0, 0, 0.4)
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_2"]
font_size = 16
font_color = Color(0.7, 0.7, 0.75, 0.9)
outline_size = 1
outline_color = Color(0.1, 0.1, 0.15, 0.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.2, 0.2, 0.25, 0.85)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.4, 0.4, 0.45, 0.6)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.3, 0.3, 0.35, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.5, 0.5, 0.55, 0.8)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
bg_color = Color(0.4, 0.4, 0.45, 0.95)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.6, 0.6, 0.65, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="Theme" id="Theme_1"]
Button/styles/focus = SubResource("StyleBoxFlat_2")
Button/styles/hover = SubResource("StyleBoxFlat_2")
Button/styles/normal = SubResource("StyleBoxFlat_1")
Button/styles/pressed = SubResource("StyleBoxFlat_3")

[sub_resource type="Gradient" id="Gradient_1"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0.1, 0.1, 0.12, 1, 0.15, 0.15, 0.18, 1, 0.1, 0.1, 0.12, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1"]
gradient = SubResource("Gradient_1")
fill_from = Vector2(0, 1)
fill_to = Vector2(1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4"]
bg_color = Color(0.15, 0.15, 0.18, 0.92)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.45, 0.7)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5"]
bg_color = Color(0.6, 0.25, 0.25, 0.8)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.7, 0.35, 0.35, 0.9)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6"]
bg_color = Color(0.7, 0.3, 0.3, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.4, 0.4, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7"]
bg_color = Color(0.8, 0.35, 0.35, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.9, 0.5, 0.5, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="Theme" id="Theme_2"]
Button/styles/focus = SubResource("StyleBoxFlat_6")
Button/styles/hover = SubResource("StyleBoxFlat_6")
Button/styles/normal = SubResource("StyleBoxFlat_5")
Button/styles/pressed = SubResource("StyleBoxFlat_7")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main_menu")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_1")

[node name="ParticleSystem" type="CPUParticles2D" parent="."]
position = Vector2(640, 360)
amount = 25
lifetime = 15.0
emission = Rect2(-640, -360, 1280, 720)
direction = Vector2(0, 1)
spread = 20.0
initial_velocity_min = 15.0
initial_velocity_max = 30.0
gravity = Vector2(0, 15)
scale_amount_min = 0.3
scale_amount_max = 1.2
color = Color(0.6, 0.6, 0.7, 0.15)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -220.0
offset_right = 280.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="MainContainer/TitleContainer"]
layout_mode = 2
text = "PORTAL WARFARE"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="MainContainer/TitleContainer"]
layout_mode = 2
text = "Advanced 3D FPS Experience"
label_settings = SubResource("LabelSettings_2")
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="MainContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="MenuPanel" type="Panel" parent="MainContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4")

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/MenuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="StartButton" type="Button" parent="MainContainer/MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(480, 50)
layout_mode = 2
theme = SubResource("Theme_1")
text = "CAMPAIGN MODE"

[node name="BigMapButton" type="Button" parent="MainContainer/MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(480, 50)
layout_mode = 2
theme = SubResource("Theme_1")
text = "EXPLORATION MODE"

[node name="TargetPracticeButton" type="Button" parent="MainContainer/MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(480, 50)
layout_mode = 2
theme = SubResource("Theme_1")
text = "TARGET PRACTICE"

[node name="WaveSurvivalButton" type="Button" parent="MainContainer/MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(480, 50)
layout_mode = 2
theme = SubResource("Theme_1")
text = "WAVE SURVIVAL"

[node name="Spacer2" type="Control" parent="MainContainer/MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="OptionsButton" type="Button" parent="MainContainer/MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(480, 50)
layout_mode = 2
theme = SubResource("Theme_1")
text = "SETTINGS"

[node name="CreditsButton" type="Button" parent="MainContainer/MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(480, 50)
layout_mode = 2
theme = SubResource("Theme_1")
text = "CREDITS"

[node name="Spacer3" type="Control" parent="MainContainer/MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="QuitButton" type="Button" parent="MainContainer/MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(480, 50)
layout_mode = 2
theme = SubResource("Theme_2")
text = "EXIT GAME"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -25.0
offset_right = -10.0
offset_bottom = -5.0
text = "Version 1.0.0"
label_settings = SubResource("LabelSettings_2")
horizontal_alignment = 2

[node name="SettingsMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsBackground" type="ColorRect" parent="SettingsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="SettingsPanel" type="Panel" parent="SettingsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -250.0
offset_right = 350.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4")

[node name="CreditsMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CreditsBackground" type="ColorRect" parent="CreditsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CreditsPanel" type="Panel" parent="CreditsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4")
